--- a/menu.html
+++ b/menu.html
@@ -65,7 +65,7 @@
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
-    				<!-- <li><a href="#sushi">Sushi</a></li> -->
+    				<li><a href="#sushi">Sushi</a></li>
     				<li><a href="#perStuzzicare">Per Stuzzicare</a></li>
     				<li><a href="#hamburger">Hamburger</a></li>
     				<li><a href="#carne">Carni</a></li>
@@ -82,7 +82,7 @@
     </div>
     <div id="menupage-text">
     	<div class="grid-container">
-    		<!-- <section class="grid-x grid-margin-x grid-margin-y" id="sushi" data-magellan-target="sushi">
+    		<section class="grid-x grid-margin-x grid-margin-y" id="sushi" data-magellan-target="sushi">
     			<div class="small-12 cell">
     				<h2>Sushi i Nostri Signature</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
@@ -333,7 +333,7 @@
     					</div> 
     				</div>
     			</div>
-    		</section> -->
+    		</section>
     		<section class="grid-x grid-margin-x grid-margin-y" id="perStuzzicare" data-magellan-target="perStuzzicare">
     			<div class="small-12 cell">
     				<h2>Per Stuzzicare</h2>
@@ -735,7 +735,7 @@
     							</div>
     						</div>
     					</div>
-                        <!-- <div class="cell">
+                        <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/Arrosticini_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Arrosticini">
@@ -743,7 +743,7 @@
                                     <p>Arrosticini artigianali di pecora (12 pezzi).<span class=""><br><small>Allergeni: --</small></span></p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
     				</div>
     			</div>
     		</section>
