--- a/menu.html
+++ b/menu.html
@@ -905,14 +905,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="cell">
+                       <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Weisse<span class="price">4 | 6,5 | 13</span></h3>
                                     <p class="">Weisse 5,4%. Birrificio Kapuziner-Moenchshof.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
