--- a/menu.html
+++ b/menu.html
@@ -1110,14 +1110,14 @@
     							</div>
     						</div>
     					</div>
-                        <div class="cell">
+                      <!--  <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Zona Mugnetti 50cl<span class="price">6,5</span></h3>
                                     <p class="">Birrificio Mukkeller. Belgian Ale 6%. Colore arancio chiaro, gusto morbido con sentori di arance e limoni.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1134,14 +1134,14 @@
                                 </div>
                             </div>
                         </div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Mazzu de Fiuri 50cl<span class="price">6,5</span></h3>
     								<p class="">Birrificio Mukkeller. IPA 6%. Birra bionda dall&#x27;amaro persistente e speziato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
                         <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
@@ -1290,7 +1290,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Ribolla Gialla igt<span class="price">22 | 5</span></h3>
@@ -1305,7 +1305,7 @@
                                     <p class="">Cantina Umani Ronchi. Colore rosa quarzo. Al naso profuma di giacinto e di rosa, di lampone e melograno, di rosmarino e caramella di liquirizia. In bocca ha acidità agrumata, è vivo e sapido.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
