--- a/menu.html
+++ b/menu.html
@@ -347,7 +347,7 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/OliveallAscolana_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Olive all&#x27;Ascolana">
@@ -355,7 +355,7 @@
     								<p>Il più tipico street food marchigiano (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Sedano</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1110,14 +1110,14 @@
     							</div>
     						</div>
     					</div>
-                      <!--  <div class="cell">
+                       <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Zona Mugnetti 50cl<span class="price">6,5</span></h3>
                                     <p class="">Birrificio Mukkeller. Belgian Ale 6%. Colore arancio chiaro, gusto morbido con sentori di arance e limoni.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1134,14 +1134,14 @@
                                 </div>
                             </div>
                         </div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Mazzu de Fiuri 50cl<span class="price">6,5</span></h3>
     								<p class="">Birrificio Mukkeller. IPA 6%. Birra bionda dall&#x27;amaro persistente e speziato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
                         <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
@@ -1166,14 +1166,14 @@
                                 </div>
                             </div>
                         </div> -->
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Hattori Hanzo 50cl<span class="price">6,5</span></h3>
     								<p class="">Birrificio Mukkeller. Doppia IPA 8,2%. Birra bionda dall&#x27;amaro pulito e persistente. Crea dipendenza.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1226,14 +1226,6 @@
     			<div class="small-12 cell">
     				<h2>Vino<small>Bottiglia | Calice</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<!-- <div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Rosso igt Salento - Fichimori<span class="price">18 | 5</span></h3>
-    								<p class="">Cantina Tormaresca. Da bere freddo. Colore rosso rubino. Al naso prevalgono le note di frutta rossa, di fragola e lampone, seguite da delicate sensazioni di rosa canina. Al palato è fresco, sapido e scorrevole, caratterizzato da un ingresso morbido e un retrogusto fruttato.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
-    							</div>
-    						</div>
-    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1290,7 +1282,7 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Ribolla Gialla igt<span class="price">22 | 5</span></h3>
@@ -1298,7 +1290,7 @@
     							</div>
     						</div>
     					</div>
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Rosato igt biologico - Centovie<span class="price">18 | 4</span></h3>
@@ -1390,14 +1382,6 @@
     			<div class="small-12 cell">
     				<h2>Rhum</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<!-- <div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Centenario 9 anni<span class="price">6</span></h3>
-    								<p class="">Costa Rica 40%. Profumo di vaniglia, cuoio, cioccolato, sciroppo d&#x27;acero e menta. Al palato sentori di cioccolato, pelle, miele e menta piperita.<span class="hide"><br><small>Allergeni: </small></span></p>
-    							</div>
-    						</div>
-    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1466,6 +1450,14 @@
     							</div>
     						</div>
     					</div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Gin Tonic Insulae<span class="price">9</span></h3>
+                                    <p class="">Gin Siciliano fresco e pulito. Servito con acqua tonica J. Gasco.<span class="hide"><br><small>Allergeni: </small></span></p>
+                                </div>
+                            </div>
+                        </div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1564,20 +1556,6 @@
                 </div>
             </form>
         </div>
-        <!-- fine modal reset password -->
-    
-        <!--  <div class="grid-x grid-padding-x grid-margin-y">
-            <div class="small-12 cell">
-                <h5 class="text-center subheader">oppure</h5>
-            </div>
-        </div> -->
-        <!-- <div class="grid-x grid-padding-x grid-padding-y">
-            <div class="small-12 cell">
-                <button type="button" class="button">Accedi con Facebook</button>
-                <button type="button" class="button alert">Accedi con Google</button>
-            </div>
-        </div> -->
-    
         <form autocomplete="on">
             <div class="grid-x grid-padding-x extra-space">
                 <div class="small-12 cell">
