--- a/menu.html
+++ b/menu.html
@@ -1282,14 +1282,14 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Ribolla Gialla igt<span class="price">22 | 5</span></h3>
     								<p class="">Cantina Branko. Al naso ricorda un bouquet di fiori bianchi. Al palato si evidenzia una giusta sapidità accompagnata dalla tipica acidità del vitigno.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
                         <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
