--- a/menu.html
+++ b/menu.html
@@ -356,7 +356,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Falafel_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Falafel">
@@ -364,7 +364,7 @@
     								<p>Falafel di ceci, mais, cipolle e zucchine. Serviti con salsa tzatziki fatta in casa (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Sedano, Senape</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -717,7 +717,7 @@
     			<div class="small-12 cell">
     				<h2>Carne</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
+    					<!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/CostineBBQ_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Costine BBQ">
@@ -725,7 +725,7 @@
                                     <p>Costine di suino allevato allo stato brado in salsa bbq.<span class=""><br><small>Allergeni: Anidride Solforosa e Solfiti, Glutine, Pesce, Semi di Sesamo</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
