--- a/menu.html
+++ b/menu.html
@@ -929,14 +929,14 @@
     							</div>
     						</div>
     					</div>
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Thee Bitter<span class="price">4 | 6,5 | 13</span></h3>
                                     <p class="">Bitter inglese ambrata 4,5%. Birrificio Resina.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -985,6 +985,14 @@
     							</div>
     						</div>
     					</div> -->
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Ridopoco<span class="price">4 | 6,5 | 13</span></h3>
+                                    <p class="">America pale ale 6,2%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -993,6 +1001,14 @@
     							</div>
     						</div>
     					</div>
+                        <!-- <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Variante IPA 50cl<span class="price">4 | 6,5 | 13</span></h3>
+                                    <p class="">IPA 6,6%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div> -->
                         <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
@@ -1062,14 +1078,14 @@
     			<div class="small-12 cell">
     				<h2>Birra Artigianale in Bottiglia</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Landbier 1857 50cl<span class="price">6</span></h3>
     								<p class="">Birrificio Bayreuther. Helles export tedesca 5,3%.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
