--- a/menu.html
+++ b/menu.html
@@ -839,7 +839,7 @@
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Succo alla Pesca<span class="price">3,5</span></h3>
-                                    <p class="">Yoga 20cl.<span class="hide"><br><small>Allergeni: nessuno</small></span></p>
+                                    <p class="">Pago 20cl.<span class="hide"><br><small>Allergeni: nessuno</small></span></p>
                                 </div>
                             </div>
                         </div>
