--- a/menu.html
+++ b/menu.html
@@ -356,7 +356,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Falafel_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Falafel">
@@ -364,7 +364,7 @@
     								<p>Falafel di ceci, mais, cipolle e zucchine. Serviti con salsa tzatziki fatta in casa (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Sedano, Senape</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
