--- a/menu.html
+++ b/menu.html
@@ -1004,7 +1004,7 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Variante IPA 50cl<span class="price">4 | 6,5 | 13</span></h3>
+                                    <h3>Variante IPA<span class="price">4 | 6,5 | 13</span></h3>
                                     <p class="">IPA 6,6%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
