--- a/menu.html
+++ b/menu.html
@@ -831,7 +831,7 @@
     						<div class="card">
     							<div class="card-section">
     								<h3>Acqua Tonica<span class="price">3</span></h3>
-    								<p class="">J.Gasco 20cl.<span class="hide"><br><small>Allergeni: nessuno</small></span></p>
+    								<p class="">Fever Tree 20cl.<span class="hide"><br><small>Allergeni: nessuno</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -1250,6 +1250,14 @@
     							</div>
     						</div>
     					</div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Rosso Conero doc - San Lorenzo<span class="price">19</span></h3>
+                                    <p class="">Cantina Umani Ronchi. Colore rosso rubino con riflessi granata. Profumi di frutta rossa e spezie dolci, gusto ricco di polpa e freschezza, contraddistinto da tannini ben levigati e da un persistente e lungo finale fruttato.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
+                                </div>
+                            </div>
+                        </div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1479,14 +1487,6 @@
     							<div class="card-section">
     								<h3>Gin Tonic Silverback<span class="price">8</span></h3>
     								<p class="">London Dry Gin con profumi agrumati e floreali; speziato, erbaceo con note dolci di arancia, miele e citronella e sentori di ginepro. Servito con acqua tonica J. Gasco.<span class="hide"><br><small>Allergeni: </small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Gin Tonic Puro<span class="price">8</span></h3>
-    								<p class="">Complesso, con un carattere officinale fresco e agrumato, ma sorpendentemente morbido e persistente. Servito con acqua tonica J. Gasco.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
     					</div>
