--- a/asporto.html
+++ b/asporto.html
@@ -109,7 +109,7 @@
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
-    				<li><a href="#sushi">Sushi</a></li>
+    				<!-- <li><a href="#sushi">Sushi</a></li> -->
     				<li><a href="#stuzzicare">Per Stuzzicare</a></li>
     				<li><a href="#hamburger">Hamburger</a></li>
     				<li><a href="#carne">Carni</a></li>
@@ -126,37 +126,37 @@
     		<div class="grid-x grid-margin-x">
     			<div class="small-12 large-8 cell">
     				<section class="grid-x grid-margin-x grid-margin-y" id="sushi" data-magellan-target="sushi">
-    					<div class="small-12 cell" >
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi i Nostri Signature</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y" id="ecommerce-button-top">
     						</div>
     					</div>
-    					<div class="small-12 cell" >
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Special Mix</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     						</div>
     					</div>
-    					<div class="small-12 cell" >
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Selezione di Roll</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     						</div>
     					</div>
-    					<div class="small-12 cell" >
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Uramaki Classici</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     						</div>
     					</div>
-    					<div class="small-12 cell" >
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Hosomaki</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     						</div>
     					</div>
-    					<div class="small-12 cell" >
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Nigiri</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     						</div>
     					</div>
-    					<div class="small-12 cell" >
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Kit</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y noimage">
     						</div>
