--- a/menu.html
+++ b/menu.html
@@ -1259,7 +1259,7 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Chianti Superiore docg - Santa Cristina<span class="price">18</span></h3>
+                                    <h3>Chianti Superiore docg - Santa Cristina<span class="price">18 | 4,5</span></h3>
                                     <p class="">Cantina Santa Cristina. Colore rosso rubino con riflessi violacei. Al naso è ricco, con note fruttate di marasca, erbe aromatiche e sensazioni balsamiche. Al palato è morbido e avvolgente, con un finale lungo e sapido.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
                                 </div>
                             </div>
