--- a/menu.html
+++ b/menu.html
@@ -967,14 +967,14 @@
     							</div>
     						</div>
     					</div> -->
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Ridopoco<span class="price">4 | 6,5 | 13</span></h3>
                                     <p class="">America pale ale 6,2%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
