--- a/menu.html
+++ b/menu.html
@@ -1112,18 +1112,18 @@
     						<div class="card">
     							<div class="card-section">
     								<h3>Weisse 50cl<span class="price">6</span></h3>
-    								<p class="">Birrificio Maisel. Weisse tedesca 5,1%. Bionda con prevalenti note di banana.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+    								<p class="">Birrificio Franziskaner. Weisse tedesca 5,1%. Bionda con prevalenti note di banana.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
     					</div>
-                       <!-- <div class="cell">
+                       <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Zona Mugnetti 50cl<span class="price">6,5</span></h3>
                                     <p class="">Birrificio Mukkeller. Belgian Ale 6%. Colore arancio chiaro, gusto morbido con sentori di arance e limoni.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1140,22 +1140,22 @@
                                 </div>
                             </div>
                         </div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Mazzu de Fiuri 50cl<span class="price">6,5</span></h3>
     								<p class="">Birrificio Mukkeller. IPA 6%. Birra bionda dall&#x27;amaro persistente e speziato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
-                        <!-- <div class="cell">
+    					</div>
+                        <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Variante IPA 50cl<span class="price">6,5</span></h3>
                                     <p class="">Birrificio Mukkeller. IPA 6,6%. Birra con un buon corpo, succosa con un amaro deciso. In bocca frutta gialla matura, agrumi e frutta tropicale.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1164,22 +1164,22 @@
     							</div>
     						</div>
     					</div> -->
-                        <!-- <div class="cell">
+                        <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Tulio 50cl<span class="price">6,5</span></h3>
                                     <p class="">Birrificio Mukkeller. Rye IPA 6,5%. Colore dorato intenso. Luppolatura generosa che si fonde alla perfezione con i malti d'orzo e di segale.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
-                        </div> -->
-    					<!-- <div class="cell">
+                        </div>
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Hattori Hanzo 50cl<span class="price">6,5</span></h3>
     								<p class="">Birrificio Mukkeller. Doppia IPA 8,2%. Birra bionda dall&#x27;amaro pulito e persistente. Crea dipendenza.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
